added footer and featured component

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         font-family: "Roboto", sans-serif;
       }
     </style>
-    <title>workr</title>
+    <title>mol..</title>
   </head>
   <body>
     <div id="root"></div>
